--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-logging.level.root=INFO
-spring.data.mongodb.uri=mongodb+srv://gaurav:1234@student-cluster.dvqhlhu.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=courseDb
+logging.level.org.springFramework=debug
+spring.data.mongodb.uri=mongodb+srv://AryanSaxena:1234@cluster0.7ywim.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=userDb
+spring.data.mongodb.auto-index-creation=true
+spring.main.allow-bean-definition-overriding=true
