Login Files Added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.org.springFramework=debug
-spring.data.mongodb.uri=mongodb+srv://AryanSaxena:1234@cluster0.7ywim.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=userDb
+spring.data.mongodb.uri=
+spring.data.mongodb.database=
 spring.data.mongodb.auto-index-creation=true
 spring.main.allow-bean-definition-overriding=true
