Add branch and user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.org.springFramework=debug
-spring.data.mongodb.uri=
-spring.data.mongodb.database=
-spring.data.mongodb.auto-index-creation=true
-spring.main.allow-bean-definition-overriding=true
+spring.data.mongodb.uri=mongodb+srv://milind0110:1234@cluster0.unfy45h.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=Student1DB
+#spring.data.mongodb.auto-index-creation=true
+#spring.main.allow-bean-definition-overriding=true
